--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-django
-psycopg2
+# Base
+# -------------------------------
+django==1.10.7
+psycopg2==2.7.1
+
+# Test
+# -------------------------------
+django-test-plus==1.0.17
+factory-boy==2.8.1
+pytest-django==3.1.2
+pytest-sugar==0.8.0
