* Add and setup django-environ * Read database from .env * Add .env to .gitignore

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Base
 # -------------------------------
+django-environ==0.4.2
 django==1.10.7
 psycopg2==2.7.1
+
 
 # Test
 # -------------------------------
