--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ env:
     - DJANGO_SETTINGS_MODULE="ares.settings"
     - PYTHONPATH="$HOME/build/tehpug/Ares"
   matrix:
-    - DJANGO=1.11 DB=postgresql
+    - DB=postgresql
+    - READ_ENV_FILE=False
 
 install:
-  - pip install -q Django==$DJANGO
   - pip install -q -r requirements.txt
 
 before_script:
@@ -21,4 +21,4 @@ before_script:
   - python manage.py migrate --noinput
 
 script:
-  - python manage.py test
+  - pytest
