--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,13 @@
 pika
 docker
-# Base
-# -------------------------------
-django-environ>=0.4
-django>=1.11
-psycopg2>=2.7
-pytz==2017.2
-celery>=4.0
-django-celery-beat>=1.0
-django-celery-results>=1.0
-
-
-# Test
-# -------------------------------
-django-test-plus>=1.0
-factory-boy>=2.8
-pytest-django>=3.1
-pytest-sugar>=0.8
+django-environ
+django
+psycopg2
+pytz
+celery
+django-celery-beat
+django-celery-results
+django-test-plus
+factory-boy
+pytest-django
+pytest-sugar
